# vague-search

./: .gitignore  AUTHORS  Cargo.toml  QUESTIONS.md  README.md  build.sh
.github/workflows/: bench.yml  rust.yml
benches/: criterion_bench.rs
src/: error.rs  layer_stack.rs  levenshtein.rs  main.rs  query.rs  search_approx.rs  search_exact.rs
vague-search-core/: Cargo.toml  README.md
vague-search-core/src/: compiled_trie.rs  data_file.rs  dictionary_file.rs  error.rs  lib.rs  utils.rs
vague-search-core/src/compiled_trie/: compiled_trie.rs  from_trie.rs  index.rs  mod.rs  trie_node.rs
vague-search-core/src/trie/: compiled_trie.rs  from_trie.rs  index.rs  mod.rs  trie_node.rs  trie_node_interface.rs
vague-search-index/: Cargo.toml  README.md
vague-search-index/src/: error.rs  main.rs  patricia_trie.rs  utils.rs
