[package]
name = "vague-search"
version = "0.1.0"
authors = ["Nicolas Mémeint", "Tom Méchineau"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "vague-search-core", "vague-search-index"]

[profile.release]
lto = "fat"
panic = "abort"

[dependencies]
vague-search-core = { path = "./vague-search-core" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "criterion_bench"
harness = false
