[package]
name = "vague-search"
version = "0.1.0"
authors = ["Nicolas Mémeint", "Tom Méchineau"]
edition = "2018"

[workspace]
members = [".", "vague-search-core", "vague-search-index"]

[profile.release]
lto = "fat"
panic = "abort"

[dependencies]
vague-search-core = { path = "./vague-search-core" }
snafu = "0.6"
